maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:7: error: identifier expected but '(' found.
def whoNeedsAMap((x,y)) { // marque le monde (accessible)//
                 ^JediEscaper:53: error: ':' expected but '}' found.
}
^